Working final report

--- a/reports/templates/reports/report_create.html
+++ b/reports/templates/reports/report_create.html
@@ -9,5 +9,5 @@
 
 <h2>Part 1</h2>
 {% crispy form %}
-<p>You will add details of the impact your program made in Part 2</p>
+<p>You will add details of the impact your program made in <strong>Part 2</strong></p>
 {% endblock %}
