--- a/reports/templates/reports/report_form.html
+++ b/reports/templates/reports/report_form.html
@@ -9,5 +9,5 @@
 
 <h2>Part 1 - Editing</h2>
 {% crispy form %}
-<p>You will add details of the impact your program made in Part 2</p>
+<p>You can edit &amp; add impacts to your report in <strong>Part 2</strong></p>
 {% endblock %}
