--- a/reports/templates/reports/report_list.html
+++ b/reports/templates/reports/report_list.html
@@ -7,9 +7,9 @@
 
 {% block mainfull %}
 <div class="buttons">
-  <a class="button is-primary" href="{% url 'report-impact' %}">Log Impact</a>
+  <a class="button green-bg" href="{% url 'report-impact' %}">Report Impact</a>
   {% if active_report %}
-  <a class="button is-link" href="{% url 'report-create' %}">Write Final Report</a>
+  <a class="button blue-bg" href="{% url 'report-create' %}">Write Final Report</a>
   {% endif %}
 </div>
 {% if not impacts %}
@@ -17,18 +17,28 @@
 {% else %}
 <div class="content">
 <h2>Impact Reports</h2>
-<ul>
+<div class="columns is-multiline">
 {% for impact in impacts %}
-<li>{{impact}}</li>
+  <div class="column is-one-quarter">
+    <article class="message">
+      <div class="message-header">
+        {{impact.get_activity_display}}
+      </div>
+      <div class="message-body">
+        {{impact.report}}
+      </div>
+    </article>
+  </div>
 {% endfor %}
-</ul>
+</div>
 <h2>Final Reports</h2>
 <table class="table is-fullwidth">
 {% for report in object_list %}
 <tr>
-  <td>{{report.partner}}</td>
+  <td>{{report.partner.name}}</td>
+  <td class="{% if report.status == 0%}gold-bg{% else %}green-bg{% endif%}">{{report.get_status_display}}</td>
   <td>{{report.period.year}}</td>
-  <td><a href="{% url 'report-view' report.id %}">edit</a></td>
+  <td><a href="{% url 'report-view' report.id %}">{% if report.status == 0%}edit{% else %}view{% endif%}</a></td>
 {% endfor %}
 </table>
 </div>
