--- a/reports/templates/reports/report_impact_create.html
+++ b/reports/templates/reports/report_impact_create.html
@@ -11,8 +11,6 @@
 
 <p>Add as many impacts as you like to match the events or audiences in your program.</p>
 
-<a class="button green-bg" href="{% url 'report-view' report.id %}">Save &amp; Preview Report</a>
-
 {% if impacts %}
 <p>Below are Impacts you have previously added. Use the form below to add more.</p>
 
@@ -34,7 +32,13 @@
 </table>
 {% endif %}
 
-<h3>Add an Impact</h3>
+<a class="button green-bg" href="{% url 'report-view' report.id %}">Save &amp; Preview Report</a>
+
+{% if impacts %}
+<h3>Add Additional Impact</h3>
+{% else %}
+<h3>Add Impact</h3>
+{% endif%}
 
 {% crispy form %}
 
