--- a/reports/templates/reports/report_list.html
+++ b/reports/templates/reports/report_list.html
@@ -38,7 +38,7 @@
   <td>{{report.partner.name}}</td>
   <td class="{% if report.status == 0%}gold-bg{% else %}green-bg{% endif%}">{{report.get_status_display}}</td>
   <td>{{report.period.year}}</td>
-  <td><a href="{% url 'report-view' report.id %}">{% if report.status == 0%}edit{% else %}view{% endif%}</a></td>
+  <td><a href="{% url 'report-view' report.id %}">{% if report.status == 0 and report.period.year in active_reports %}edit{% else %}view{% endif%}</a></td>
 {% endfor %}
 </table>
 </div>
