Fix hidden reports

--- a/reports/templates/reports/report_list.html
+++ b/reports/templates/reports/report_list.html
@@ -30,17 +30,22 @@
     </article>
   </div>
 {% endfor %}
+
 </div>
+{% endif %}
 <h2>Final Reports</h2>
-<table class="table is-fullwidth">
+<table class="table is-hoverable is-fullwidth">
+   <tbody>
 {% for report in object_list %}
 <tr>
   <td>{{report.partner.name}}</td>
   <td class="{% if report.status == 0%}gold-bg{% else %}green-bg{% endif%}">{{report.get_status_display}}</td>
   <td>{{report.period.year}}</td>
   <td><a href="{% url 'report-view' report.id %}">{% if report.status == 0 and report.period.year in active_reports %}edit{% else %}view{% endif%}</a></td>
+</tr>
 {% endfor %}
+ </tbody>
 </table>
 </div>
-{% endif %}
+
 {% endblock %}
