--- a/globalsky/templates/home.html
+++ b/globalsky/templates/home.html
@@ -34,7 +34,7 @@
            <div class="partnerlist">
            {% for object in partners %}
             <div class="block">
-               <a href="{% url 'partner' object.proposal_code %}">{{object.name}}</a>
+               <a href="{% url 'partner' object.id%}">{{object.name}}</a>
                <span id="{{object.proposal_code}}" style="width:20%;"></span>
             </div>
            {% empty %}
