--- a/partners/templates/partners/partner_detail.html
+++ b/partners/templates/partners/partner_detail.html
@@ -11,6 +11,7 @@
 
 {% if owner %}
 <p><a href="{% url 'partner-edit' object.id %}">Edit details</a></p>
+<p><a href="{% url 'user-upload' %}" class="button gold-bg">Create New User Accounts</a></p>
 {% endif %}
 
 <div class="buttons has-addons">
