--- a/reports/templates/reports/final_report.html
+++ b/reports/templates/reports/final_report.html
@@ -91,16 +91,17 @@
 
 <div class="content">
 {% for report in reports %}
-  <h3>{{report.partner.name}}</h3>
+  <h3><a href="{% url 'partner' report.partner.id %}">{{report.partner.name}}</a>&nbsp;<a class="toggle-hide" data-pid="{{report.partner.id}}"><i class="fas fa-eye"></i></a></h3>
   <div class="tags has-addons">
     <span class="tag">Audience</span>
     <span class="tag is-primary">{{report.subtotal}}</span>
   </div>
     <div class="flags">
     {% for country in report.countries %}
-    <i class="{{ country.flag_css }}" aria-label="{{ country.name }} flag"></i>
+    <i class="{{ country.flag_css }}" aria-label="{{ country.name }} flag"></i>&nbsp;{{ country.name }}
     {% endfor %}
     </div>
+    <div class="summary" id="summary-{{report.partner.id}}">
       <h4>Summary</h4>
       {{report.summary | markdown | safe }}
       {% if report.comment %}
@@ -114,12 +115,25 @@
         <div class="flags">
         {% for country in impact.countries %}
         <i class="{{ country.flag_css }}"
-        aria-label="{{ country.name }} flag"></i>
+        aria-label="{{ country.name }} flag"></i>&nbsp;{{ country.name }}
         {% endfor %}
         </div>
           {{impact.impact| markdown | safe }}
       {% endfor %}
+    </div>
       <hr/>
       {% endfor %}
-      </div>
+    </div>
+{% endblock %}
+
+{% block script-content %}
+<script>
+$(document).ready(function(){
+  $('.summary').hide()
+  $('.toggle-hide').on('click', function(){
+    var pid = $(this).data('pid');
+    $('#summary-'+pid).toggle();
+  })
+})
+</script>
 {% endblock %}
