--- a/reports/templates/reports/final_report.html
+++ b/reports/templates/reports/final_report.html
@@ -87,7 +87,12 @@
   </table>
 </div>
 {% endfor %}
+
 </div>
+
+<div class="content">
+  <strong>Citizen Science audience size</strong> - {{cit_science.total}}
+  </div>
 
 <div class="content">
 {% for report in reports %}
