--- a/globalsky/templates/bulma/whole_uni_form.html
+++ b/globalsky/templates/bulma/whole_uni_form.html
@@ -1,6 +1,9 @@
 {% load crispy_forms_utils %}
 
 {% specialspaceless %}
+{% if form_show_errors %}
+    {% include "bulma/errors.html" %}
+{% endif %}
 {% if form_tag %}<form {{ flat_attrs|safe }} method="{{ form_method }}" {% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>{% endif %}
     {% if form_method|lower == 'post' and not disable_csrf %}
         {% csrf_token %}
