Fix code in proposal PDF; rename PDF

--- a/partners/templates/partners/proposal_print.html
+++ b/partners/templates/partners/proposal_print.html
@@ -20,7 +20,7 @@
       <section class="section">
 
           <div class="title">
-            <p class="small">Global Sky Partner Application - {{code}}</p>
+            <p class="small">Global Sky Partner Application - GSP-{{object.code}}</p>
             <h2>{{object.partner.name}}</h2>
             <p>{{object.partner.summary}}</p>
           </div>
