Fix bug with submitting report

--- a/reports/templates/reports/report_form.html
+++ b/reports/templates/reports/report_form.html
@@ -7,7 +7,8 @@
 
 {% block mainfull %}
 
-<h2>Part 1 - Editing</h2>
+<h2>Part 1</h2>
+<p>Editing report for <strong>{{partner}}</strong></p>
 {% crispy form %}
 <p>You can edit &amp; add impacts to your report in <strong>Part 2</strong></p>
 {% endblock %}
