--- a/reports/templates/reports/final_report.html
+++ b/reports/templates/reports/final_report.html
@@ -9,35 +9,12 @@
 {% endblock %}
 
 {% block mainfull %}
-<div class="columns">
-  <div class="column is-half">
+
     {% if map %}
       {{ map|safe }}
       {% else %}
       <p>No graph was provided.</p>
     {% endif %}
-  </div>
-  <div class="column is-half">
-    <h2>Audience Size</h2>
-      <table class="table">
-      {% for k,v in demographics.items %}
-      <tr>
-        <th>{{k}}</th>
-        <td>{{v}}</td>
-      </tr>
-      {% endfor %}
-      <thead>
-      <tr>
-        <th>Total Individuals</th>
-        <td>{{total.total}}</td>
-      </tr>
-      </thead>
-    </table>
-    {% if other_demos %}
-    <p class="has-text-grey">* {{other_demos}}</p>
-    {% endif %}
-  </div>
-</div>
 
 <h2>Number of Partner Programs</h2>
 <div class="columns">
@@ -87,14 +64,47 @@
   </table>
 </div>
 {% endfor %}
+<div class="column">
+  <h2>Audience Size</h2>
+    <table class="table">
+    {% for k,v in demographics.items %}
+    <tr>
+      <th>{{k}}</th>
+      <td>{{v}}</td>
+    </tr>
+    {% endfor %}
+    <tr>
+      <td>Total Individuals</td>
+      <td>{{total}}</td>
+    </tr>
+    <tr>
+    <td>Citizen Science audience size</td>
+    <td>{{cit_science.total}}</td>
+    </tr>
+    <td>Total teachers impacted</td>
+    <td>{{total_teachers}}</td>
+    </tr>
+    <td>Estimated students (teachers x 20)</td>
+    <td>{{total_students}}</td>
+    <tr>
+    <th>Total (estimated)</th>
+    <td>{{total_size}}</td>
+    </tr>
+    </tr>
+  </table>
+  {% if other_demos %}
+  <p class="has-text-grey">* {{other_demos}}</p>
+  {% endif %}
+</div>
 
 </div>
 
 <div class="content">
-  <strong>Citizen Science audience size</strong> - {{cit_science.total}}
+
   </div>
 
 <div class="content">
+  <strong>Number of partner reports</strong> - {{num_reports}}
 {% for report in reports %}
   <h3><a href="{% url 'partner' report.partner.id %}">{{report.partner.name}}</a>&nbsp;<a class="toggle-hide" data-pid="{{report.partner.id}}"><i class="fas fa-eye"></i></a></h3>
   <div class="tags has-addons">
